[package]
name = "chatserver"
version = "0.1.0"
authors = ["aith <ariiramanesh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.3",features = ["full"] }
tokio-stream = { version = "0.1" }
halfbrown = "0.1.11"
#tokio-signal = "0.3.0-alpha.1"

tracing = "0.1"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
futures = { version = "0.3.0", features = ["thread-pool"]}

